lego 升级到jfianl3.1+动态API,yeah~